--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -2,11 +2,10 @@ name: Auto
 
 on:
   schedule:
-    - cron: "30 22 * * *" # 北京时间上午06:30
+    - cron: "0 22 * * *"  # 北京时间上午06:00
   workflow_dispatch:
 
 env:
-  COOKIE: ${{ secrets.COOKIE }}
   COOKIE_2: ${{ secrets.COOKIE_2 }}
   COOKIE_3: ${{ secrets.COOKIE_3 }}
   COOKIE_4: ${{ secrets.COOKIE_4 }}
@@ -26,6 +25,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - name: Add random delay
+        run: |
+          chmod +x ./random_delay.sh
+          ./random_delay.sh
       - name: Run Project
         run: |
           cd workflows
